--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
